fixed markup on tablet and desktop

--- a/src/sass/_all_categories.scss
+++ b/src/sass/_all_categories.scss
@@ -139,9 +139,11 @@
 .list_book_item{
   @media (min-width: 768px) {
     max-width: 218px;
+    max-height: 366px;
   }
   @media (min-width: 1440px) {
     max-width: 180px;
+    max-height: 306px;
   }
 
 }
